--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="Style.CSS"/>
 
+</head>
+<body>
+    <header class="bg-warning text-center m-3 p-3">
+        <h1>
+            Weather Dashboard
+        </h1>
+    </header>
+    <main class="container">
+        <section class="row">
+
+            <aside class="col-4">
+
+                <div>
+                    <h2>Search City</h2>
+                    <form id="Weather">
+                        <input id="city" type="text" />
+                        <button class="btn btn-warning" type="submit"id="Go">Go</button>
+                    </form>
+            
+                </div>
+            </aside>
+            <aside class="col-8"></aside>
+        </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+    <script src="Script.JS">
+        
+    </script>
+</body>
+</html>
