--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,9 @@
             </aside>
             <aside class="col-8"></aside>
         </section>
+        <section class="row">
+            <section class="col-12" id="weatherapp"></section>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
