index html names

--- a/weatherindex.html
+++ b/weatherindex.html
@@ -29,9 +29,10 @@
             
                 </div>
             </aside>
-            <aside class="col-8"></aside>
+            <aside class="col-8" id="previousSearch"></aside>
         </section>
         <section class="row">
+            <h3 id="city" class="bg-warning text-center"></h3>
             <section class="col-12 d-flex flex-wrap" id="weatherapp"></section>
         </section>
     </main>
