--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </h1>
     </header>
     <main class="container">
+        <h3 class=" bg-warning text-center text-white" id="city"></h3>
         <section class="row">
 
             <aside class="col-4">
@@ -32,8 +33,7 @@
             <aside class="col-8" id="previousSearch"></aside>
         </section>
         <section class="row">
-            <h3 id="city" class="bg-warning text-center"></h3>
-            <section class="col-12 d-flex flex-wrap" id="weatherapp"></section>
+            <section class="col-12 d-flex flex-wrap m-5 p-3" id="weatherapp"></section>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
